--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ body {
 }
 #main {
   width: 100%;
+  background: #f5f5f5;
 }
+
 #nav {
   display: flex;
   justify-content: space-between;
@@ -28,7 +30,7 @@ body {
 }
 #nav a {
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 600;
   text-decoration: none;
   color: #000;
 }
@@ -38,4 +40,101 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+#hero {
+  width: 100%;
+  /* background: red; */
+  padding: 0vw 10vw;
+  margin-top: 15vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#sustain {
+  width: 12vw;
+}
+#sustain p {
+  font-size: 12px;
+  text-transform: capitalize;
+  margin: 1.5vh 0;
+  font-weight: 800;
+  opacity: 0.5;
+  line-height: 1.2;
+}
+#sustain h2 {
+  line-height: 0.8;
+  font-weight: 600;
+}
+#sustain h5 {
+  font-weight: 800;
+  font-size: 16px;
+}
+#sustain #susImageWrapper {
+  width: 80%;
+  height: 14vw;
+  /* background: red; */
+  position: relative;
+  overflow: hidden;
+}
+#susImageWrapper img {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  width: 140%;
+  height: 140%;
+  object-fit: cover;
+}
+#hCenter {
+  position: relative;
+  width: 30vw;
+  height: 42vw;
+  /* background: rgb(239, 213, 213); */
+}
+#hCenter p {
+  position: absolute;
+  font-size: 1.6vw;
+  width: 50%;
+  letter-spacing: -0.1vw;
+  top: 105%;
+  line-height: 1.2;
+}
+#hCenter #headings {
+  position: absolute;
+  top: -21%;
+  left: -12%;
+  z-index: 20;
+}
+#hCenter h1 {
+  letter-spacing: -0.4vw;
+  font-size: 6vw;
+  font-weight: 400;
+  line-height: 1;
+}
+#hCenter img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#visit {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+#circleV {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-radius: 50%;
+  border: 1px solid rgba(24, 24, 24, 0.7);
+}
+#circleV i {
+  color: rgba(24, 24, 24, 0.7);
+  font-size: 18px;
+}
+#visit h3 {
+  color: #5e5e5e;
+  font-weight: 400;
 }
