--- a/style.css
+++ b/style.css
@@ -88,16 +88,22 @@ body {
 #hCenter {
   position: relative;
   width: 30vw;
-  height: 42vw;
+  min-height: 42vw;
   /* background: rgb(239, 213, 213); */
 }
 #hCenter p {
-  position: absolute;
+  /* position: absolute; */
   font-size: 1.6vw;
   width: 50%;
   letter-spacing: -0.1vw;
-  top: 105%;
+  /* top: 105%; */
+  margin-top: 2vw;
+  text-transform: capitalize;
   line-height: 1.2;
+}
+#image-text {
+  width: auto;
+  height: auto;
 }
 #hCenter #headings {
   position: absolute;
@@ -137,4 +143,54 @@ body {
 #visit h3 {
   color: #5e5e5e;
   font-weight: 400;
+}
+#motive {
+  padding: 3vw 10vw;
+}
+#motive h3 {
+  font-weight: 100;
+  color: #5e5e5e;
+  text-transform: uppercase;
+  font-size: 1vw;
+}
+#motive p {
+  font-size: 2vw;
+  text-align: right;
+  line-height: 1.7;
+  font-weight: 400;
+  letter-spacing: -0.1vw;
+  padding: 2vw 3vw;
+}
+#motive span {
+  display: inline-block;
+  /* width: 4vw;
+  height: 2.2vw; */
+  /* background: red; */
+  border-radius: 100px;
+  margin: 0 10px;
+  vertical-align: middle;
+}
+#one {
+  width: 4vw;
+  height: 2.4vw;
+  background-image: url(./images/bluegirl.jpg);
+  background-size: cover;
+  background-position: center;
+  image-rendering: -webkit-optimize-contrast;
+}
+#three {
+  width: 4vw;
+  height: 2.4vw;
+  background-image: url(./images/grass.jpg);
+  background-size: cover;
+  background-position: center;
+  image-rendering: -webkit-optimize-contrast;
+}
+#two {
+  width: 6vw;
+  height: 3vw;
+  background-image: url(./images/shaljam.jpg);
+  background-size: cover;
+  background-position: center;
+  image-rendering: -webkit-optimize-contrast;
 }
