--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   width: 100%;
   height: 100%;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 #main {
   width: 100%;
   background: #f5f5f5;
@@ -199,7 +202,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 2vw;
-  padding: 3vw 12vw 3vw 14vw;
+  padding: 3vw 15vw 3vw 20vw;
 }
 #firstPic {
   width: 14vw;
@@ -232,11 +235,12 @@ body {
   object-fit: cover;
   object-position: center;
 }
-#firstPic h1 {
+#firstPic h1,
+#secondPic h1 {
   font-weight: 400;
   margin-bottom: 3%;
   letter-spacing: -0.1vw;
-  font-size: 1.6vw;
+  font-size: 1.7vw;
 }
 #firstPic p,
 #secondPic p {
@@ -247,13 +251,91 @@ body {
 #firstData {
   width: 80%;
 }
-#secondPic h1 {
-  font-weight: 400;
-  margin-bottom: 3%;
-  letter-spacing: -0.1vw;
-  font-size: 1.6vw;
-}
 #secData {
   width: 70%;
   /* background: red; */
+}
+#banner {
+  width: 100%;
+  margin-top: 4vw;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5vw;
+}
+#bImg {
+  width: 70%;
+  height: 38vw;
+  /* background: red; */
+}
+#bImg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0% 70%;
+}
+#bText {
+  margin-left: 2vw;
+  /* background: rebeccapurple; */
+}
+#bText h1 {
+  font-weight: 400;
+  margin-bottom: 3%;
+  letter-spacing: -0.1vw;
+  line-height: 2vw;
+  font-size: 1.7vw;
+  margin-bottom: 1.6vw;
+}
+#bText p {
+  opacity: 0.9;
+  letter-spacing: -0.03vw;
+  width: 70%;
+}
+#future {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+}
+#future video {
+  position: absolute;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  opacity: 0;
+}
+#ftext {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 20;
+}
+#ftext h1 {
+  font-size: 2vw;
+  font-weight: 500;
+  letter-spacing: -0.1vw;
+  margin-bottom: 1vw;
+}
+#ftext button {
+  padding: 0.5vw 1.2vw 0.6vw 1.2vw;
+  border-radius: 100px;
+  border: none;
+  /*
+* Created with https://www.css-gradient.com
+* Gradient link: https://www.css-gradient.com/?c1=d0d0d0&c2=767676&gt=r&gd=dcl
+*/
+  background: #d0d0d0;
+  background: linear-gradient(90deg, #d0d0d0, #a9a9a9);
+  font-size: 0.7vw;
+  letter-spacing: -0.02vw;
+  font-weight: 500;
 }
